[tool.poetry]
name = "pythoneda-python-packages"
version = "0.0.1-alpha.1"
description = "Python packages in PythonEDA"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "EDAPythonPackages"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda = "^0.0.1a4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-grpc = "scripts.make_grpc:main"
