[tool.poetry]
name = "pythoneda-python-packages"
version = "0.0.1a3"
description = "Python packages in PythonEDA"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda/python-packages"
packages = [{include = "PythonEDAPythonPackages"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda = "^0.0.1a7"
pythoneda-git-repositories = "^0.0.1a4"
pythoneda-shared-nix = "^0.0.1a4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
